--- a/main.css
+++ b/main.css
@@ -1,38 +1,43 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
 .produtos {
-    max-width: 640px;
-    width: 100%;
-    margin: 56px auto;
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
-    grid-column-gap: 1%;
+  max-width: 640px;
+  width: 100%;
+  margin: 56px auto;
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  grid-column-gap: 1%;
 }
 
-.produto {/* bloco */
-    padding: 20px;
-    background-color: rgb(255, 247, 247);
-} 
-
-.produto__imagem { /* elemento */
-    width: 100%;
+.produto {
+  /* bloco */
+  padding: 20px;
+  background-color: rgb(255, 247, 247);
 }
 
-.produto__nome { /* elemento */
-    font-size: 1.2em;
-    margin: 8px 0;
+.produto__imagem {
+  /* elemento */
+  width: 100%;
 }
 
-.produto__descricao { /* elemento */
-    color: gray;
+.produto__nome {
+  /* elemento */
+  font-size: 1.2em;
+  margin: 8px 0;
 }
 
-.em--destaque { /* modificador */
-    border: 2px solid gold;
-    padding: 8px;
-    background-color: #ffff42;
+.produto__descricao {
+  /* elemento */
+  color: gray;
+}
+
+/* modificador */
+.produto--em-destaque {
+  border: 2px solid gold;
+  padding: 8px;
+  background-color: #ffff42;
 }
